@@ -3,6 +3,8 @@ Temporary space for 'in development' changes for the Plone 3.0 upgrade.
 Properties:
 - merge realestate_properties and realbusiness_properties into one 
   realestatebroker_properties file
-- renamed isolation -> insulation
+- renamed fields:
+  isolation -> insulation
+  type -> house_type
 - Added commercial_ and residential_ prefixes for property value lists being
   only used in residential or commercial contenttypes.
